tests/paczka1/fuzzy1/13687767.err
Error in line 2: oRVHwxN S265 17,3
Error in line 7: c8pbBp Sb65 6,0
Error in line 6: oRVHwxN A444 8,4
Error in line 18: oRVHwxN S773 77,8
Error in line 31: bkxPYANFR A444 28,4
Error in line 33: oRVHwxN S265 30,8
Error in line 34: bkxPYANFR S325 98,0
Error in line 36: zmKO6gkCV S325 74,5
Error in line 39: zmKO6gkCV S773 48,1
